# amic-vault

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.codex/environments/: environment.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  desktop.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/desktop/: README.md  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: vault-thin-shell.json
apps/desktop/src-tauri/config/: local.signed.json
apps/desktop/src-tauri/desktop-shell/: index.html
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  origin.rs  origin_guard.rs
apps/web/: Dockerfile  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
db/migrations/: 0000_noop.sql  0001_initial_schema.sql  0005_audit_events_hardening.sql  0006_audit_append_only.sql  0007_workspaces.sql  (+90 more)
docs/: current-code-state.md
infra/: docker-compose.dev.yml
script/: build_and_run.sh
workers/ingestion/: Dockerfile  README.md  pyproject.toml
workers/ingestion/app/: chunking.py  convert_router.py  extract_router.py  main.py
workers/ingestion/app/converters/: __init__.py  docx_to_pdf.py
workers/ingestion/app/parsers/: contract.py  docx.py  email.py  hwpx.py  pdf.py  types.py
workers/ingestion/tests/: test_chunking.py  test_contract_parser.py  test_docx_to_pdf.py  test_email_parser.py  test_extract_router.py
(+1165 files in other folders)
