[project]
name = "amic-vault-ingestion"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "reportlab>=4,<5"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.parsers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
